--- a/src/css/Scene.css
+++ b/src/css/Scene.css
@@ -3,9 +3,15 @@
   text-align: center;
   height: 100vh;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-body {
-  padding: 0;
-  margin: 0;
+.viewer {
+  height: 80vh;
+  width: 80%;
+  border-radius: 50px;
+}
+Canvas {
+  border-radius: 50px;
 }
