--- a/src/css/MagicTextBox.css
+++ b/src/css/MagicTextBox.css
@@ -38,3 +38,17 @@ a {
 #myBtn:hover {
   color: #0088a9;
 }
+
+@media (max-height: 850px) and (orientation: portrait) {
+  .box {
+    max-width: 80vw;
+    min-width: 80vw;
+    max-height: 90vh;
+    min-height: 10vh;
+  }
+}
+@media (max-height: 450px) and (orientation: landscape) {
+  .box {
+    background-color: blue;
+  }
+}
