--- a/src/css/SlidingInfo.css
+++ b/src/css/SlidingInfo.css
@@ -1,11 +1,10 @@
 .slidershow {
   height: 50vh;
   width: 80vw;
-  /*height: 10vh;*/
   overflow: hidden;
 }
+
 .middle {
-  /*position: absolute;*/
   margin: auto;
   align-items: center;
   top: 0;
@@ -13,26 +12,25 @@
   bottom: 0;
   right: 0;
 }
+
 .navigation {
   position: absolute;
   margin-top: -40px;
   display: flex;
   justify-content: center;
-  /*bottom: 20px;*/
   left: 50%;
   transform: translateX(-50%);
-  /*border: 2px solid #fff;*/
 }
+
 .bar {
   width: 50px;
-  /*height: 5px;*/
   border: 2px solid #fff;
-  /*border-radius: 10px;*/
   padding: 5px;
   margin: 6px;
   cursor: pointer;
   transition: 0.4s;
 }
+
 .bar:hover {
   background: #fff;
 }
@@ -41,28 +39,44 @@ input[name="r"] {
   position: absolute;
   visibility: hidden;
 }
+
 .slides {
   width: 400%;
   height: 100%;
   display: flex;
 }
+
 .slide {
   width: 25%;
   transition: 0.9s;
 }
+
 .slide img {
   width: 100%;
-  /*height: 100%;*/
 }
+
 #r1:checked ~ .s1 {
   margin-left: 0;
 }
+
 #r2:checked ~ .s1 {
   margin-left: -25%;
 }
+
 #r3:checked ~ .s1 {
   margin-left: -50%;
 }
+
 #r4:checked ~ .s1 {
   margin-left: -75%;
+}
+
+@media (max-height: 850px) and (orientation: portrait) {
+  .slidershow {
+    height: 60vh;
+    width: 90vw;
+  }
+}
+
+@media (max-height: 450px) and (orientation: landscape) {
 }
