--- a/src/css/about.css
+++ b/src/css/about.css
@@ -28,6 +28,19 @@
   justify-content: space-between;
   */
   justify-content: space-evenly;
-  width: 100vw;
+  width: 100%;
   align-items: center;
+  overflow-x: hidden;
+}
+
+@media (max-height: 850px) and (orientation: portrait) {
+  .about {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-height: 450px) and (orientation: landscape) {
+  .about {
+    background-color: blue;
+  }
 }
