--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -3,7 +3,7 @@ a,
 button {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 1.5vw;
   color: rgb(187, 187, 187);
   text-decoration: none;
 }
@@ -18,7 +18,6 @@ header {
   left: 0%;
   width: 99.9%;
   margin: auto;
-  z-index: 2;
   height: 10vh;
 }
 .nav_links {
@@ -40,4 +39,15 @@ header {
   justify-content: center;
   padding: 10px;
   margin: 10px;
+}
+
+@media (max-height: 850px) and (orientation: portrait) {
+  li,
+  a,
+  button {
+    font-size: 3vw;
+  }
+}
+
+@media (max-height: 450px) and (orientation: landscape) {
 }
